--- a/index.html
+++ b/index.html
@@ -1,85 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chandu | Portfolio</title>
+
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: #f2f2f2;
+        }
+
+        header {
+            background: #333;
+            color: white;
+            padding: 15px 20px;
+            text-align: center;
+        }
+
+        nav {
+            background: #444;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            color: #ffca28;
+        }
+
+        .section {
+            padding: 40px 20px;
+            text-align: center;
+        }
+
+        .projects {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
+
+        .card {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+
+        .skills span {
+            display: inline-block;
+            padding: 8px 12px;
+            background: #333;
+            color: white;
+            border-radius: 8px;
+            margin: 5px;
+        }
+
+        footer {
+            background: #333;
+            color: white;
+            text-align: center;
+            padding: 15px 0;
+        }
+
+        input, textarea {
+            width: 80%;
+            padding: 10px;
+            margin: 8px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+        }
+
+        button {
+            background: #333;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background: #ffca28;
+            color: #000;
+        }
+    </style>
 </head>
 <body>
 
-    <!-- Navbar -->
+    <header>
+        <h1>Chandu — Personal Portfolio</h1>
+    </header>
+
     <nav>
-        <h2 class="logo">Portfolio</h2>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#skills">Skills</a>
+        <a href="#contact">Contact</a>
     </nav>
 
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="content">
-            <h1>Hi, I'm <span>Your Name</span></h1>
-            <p>Front-End Developer & Tech Enthusiast</p>
-            <a href="#projects" class="btn">View Projects</a>
-        </div>
-        <img src="assets/profile.jpg" alt="Profile Image" class="profile-img">
+    <!-- ABOUT SECTION -->
+    <section id="about" class="section">
+        <h2>About Me</h2>
+        <p>Hello! I'm Chandu — a web developer passionate about building clean and responsive websites using HTML, CSS and JavaScript.</p>
     </section>
 
-    <!-- About -->
-    <section id="about" class="about">
-        <h2 class="title">About Me</h2>
-        <p>
-            I am a passionate developer skilled in HTML, CSS, JavaScript, and modern web design.  
-            I love building clean, responsive and attractive websites.
-        </p>
-    </section>
+    <!-- PROJECTS SECTION -->
+    <section id="projects" class="section">
+        <h2>My Projects</h2>
 
-    <!-- Projects -->
-    <section id="projects" class="projects">
-        <h2 class="title">My Projects</h2>
-
-        <div class="project-grid">
-
-            <div class="project-card">
-                <img src="assets/project1.jpg" alt="">
-                <h3>E-Commerce Website</h3>
-                <p>A clean UI online shopping website.</p>
-            </div>
-
-            <div class="project-card">
-                <img src="assets/project1.jpg" alt="">
+        <div class="projects">
+            <div class="card">
                 <h3>Weather App</h3>
-                <p>Real-time weather using API.</p>
+                <p>A simple weather dashboard using API.</p>
             </div>
 
-            <div class="project-card">
-                <img src="assets/project1.jpg" alt="">
-                <h3>Music Player</h3>
-                <p>Play, pause, next, and previous controls.</p>
+            <div class="card">
+                <h3>Portfolio Website</h3>
+                <p>Minimal and responsive personal portfolio.</p>
             </div>
 
+            <div class="card">
+                <h3>Todo App</h3>
+                <p>Task manager with local storage support.</p>
+            </div>
         </div>
     </section>
 
-    <!-- Contact -->
-    <section id="contact" class="contact">
-        <h2 class="title">Contact Me</h2>
-
-        <div class="contact-box">
-            <p>Email: <strong>yourmail@gmail.com</strong></p>
-            <p>Phone: <strong>9876543210</strong></p>
+    <!-- SKILLS SECTION -->
+    <section id="skills" class="section">
+        <h2>Skills</h2>
+        <div class="skills">
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>JavaScript</span>
+            <span>Responsive Design</span>
         </div>
     </section>
 
-    <!-- Footer -->
+    <!-- CONTACT SECTION -->
+    <section id="contact" class="section">
+        <h2>Contact Me</h2>
+
+        <input type="text" id="name" placeholder="Your Name">
+        <br>
+        <textarea id="message" placeholder="Your Message"></textarea>
+        <br>
+        <button onclick="sendMessage()">Send</button>
+    </section>
+
     <footer>
-        <p>© 2025 Your Name | All Rights Reserved</p>
+        <p>© 2025 Chandu | All Rights Reserved</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script>
+        function sendMessage() {
+            let name = document.getElementById("name").value;
+            let msg = document.getElementById("message").value;
+
+            if (name === "" || msg === "") {
+                alert("Please enter both name and message.");
+            } else {
+                alert("Thanks " + name + "! Your message was sent.");
+            }
+        }
+    </script>
+
 </body>
 </html>
