--- a/index.html
+++ b/index.html
@@ -1,85 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chandu | Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav>
-        <h2 class="logo">Portfolio</h2>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+    <header>
+        <div class="logo">Chandu</div>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="#skills">Skills</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
 
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="content">
-            <h1>Hi, I'm <span>Your Name</span></h1>
-            <p>Front-End Developer & Tech Enthusiast</p>
-            <a href="#projects" class="btn">View Projects</a>
-        </div>
-        <img src="assets/profile.jpg" alt="Profile Image" class="profile-img">
+    <!-- HERO -->
+    <section class="hero">
+        <h1>Hi, I'm <span>Chandu</span></h1>
+        <p>Front-end Developer • UI Enthusiast</p>
+        <a href="#projects" class="btn">View My Work</a>
     </section>
 
-    <!-- About -->
-    <section id="about" class="about">
-        <h2 class="title">About Me</h2>
+    <!-- ABOUT -->
+    <section id="about" class="section">
+        <h2>About Me</h2>
         <p>
-            I am a passionate developer skilled in HTML, CSS, JavaScript, and modern web design.  
-            I love building clean, responsive and attractive websites.
+            I'm a beginner web developer passionate about creating clean, 
+            responsive websites using HTML, CSS and JavaScript. I love learning 
+            new things and improving my design skills.
         </p>
     </section>
 
-    <!-- Projects -->
-    <section id="projects" class="projects">
-        <h2 class="title">My Projects</h2>
+    <!-- PROJECTS -->
+    <section id="projects" class="section">
+        <h2>Projects</h2>
 
         <div class="project-grid">
-
-            <div class="project-card">
-                <img src="assets/project1.jpg" alt="">
-                <h3>E-Commerce Website</h3>
-                <p>A clean UI online shopping website.</p>
-            </div>
-
-            <div class="project-card">
-                <img src="assets/project1.jpg" alt="">
+            <div class="card">
                 <h3>Weather App</h3>
-                <p>Real-time weather using API.</p>
+                <p>A live weather app using API and JavaScript.</p>
             </div>
 
-            <div class="project-card">
-                <img src="assets/project1.jpg" alt="">
-                <h3>Music Player</h3>
-                <p>Play, pause, next, and previous controls.</p>
+            <div class="card">
+                <h3>Todo List App</h3>
+                <p>Simple task manager with local storage.</p>
             </div>
 
+            <div class="card">
+                <h3>Portfolio Website</h3>
+                <p>Modern portfolio built with HTML, CSS, JS.</p>
+            </div>
         </div>
     </section>
 
-    <!-- Contact -->
-    <section id="contact" class="contact">
-        <h2 class="title">Contact Me</h2>
-
-        <div class="contact-box">
-            <p>Email: <strong>yourmail@gmail.com</strong></p>
-            <p>Phone: <strong>9876543210</strong></p>
+    <!-- SKILLS -->
+    <section id="skills" class="section">
+        <h2>Skills</h2>
+        <div class="skill-list">
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>JavaScript</span>
+            <span>UI Design</span>
+            <span>Responsive Design</span>
         </div>
     </section>
 
-    <!-- Footer -->
+    <!-- CONTACT -->
+    <section id="contact" class="section contact-box">
+        <h2>Contact Me</h2>
+
+        <input type="text" id="name" placeholder="Your Name" />
+        <textarea id="message" placeholder="Your Message"></textarea>
+        <button onclick="sendMessage()">Send Message</button>
+    </section>
+
     <footer>
-        <p>© 2025 Your Name | All Rights Reserved</p>
+        <p>© 2025 Chandu • All Rights Reserved</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
